Fixed the full width and reshuffle on small devices

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ a {
   color: inherit;
 }
 
-.img-full {
+.img-full img {
   width: 100%;
 }
 
